Background and colour change plus spacing fixes.

--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -4,8 +4,8 @@
   margin: 50px 0;
   padding: 30px 0;
   text-align: center;
-  border-top: 1px solid $colour-border-light;
-  border-bottom: 1px solid $colour-border-light;
+  border-top: 1px solid $colour-border-dark;
+  border-bottom: 1px solid $colour-border-dark;
 
   &::before {
     content: '';
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: .2;
+    opacity: .4;
     background: url(img/tardis-bg.svg) no-repeat;
     background-size: 35%;
     background-position: 50% 10%;
