--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,26 +6,30 @@
 }
 
 // Main layout
-.wrap {
+.home .wrap {
   width: 100%;
   position: relative;
-  margin: 50px auto 0 auto;
-  padding-bottom: 50px;
+  margin: 0 auto;
+  padding: 50px 0;
   @include clearfix;
 
   &::before {
     content: '';
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     bottom: 0;
     left: 0;
     z-index: -1;
-    opacity: .3;
-    background: url(img/body-bg.jpg) no-repeat;
-    background-position: bottom center;
-    background-size: contain;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/space-bg.jpg) no-repeat;
+    background-position: center center;
+    background-size: cover;
+    will-change: transform;
   }
+}
+
+.wrap {
+  padding: 50px 0;
 }
 
 .main-content {
