--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -10,7 +10,7 @@
   }
 
   h5 {
-    margin-bottom: 10px;
+    margin: -5px 0 10px 0;
   }
 
   // Social Links
